feat: Atualização completa para bhub.online e preparação para deploy
- ✅ Configuração do domínio bhub.online em todos os arquivos
- ✅ Atualização do conceito de 'Agregador RSS' para 'Repositório de Consulta'
- ✅ Atualização de todas as páginas com novo conteúdo
- ✅ Configuração de credenciais de demonstração condicionais
- ✅ Preparação completa para deploy no Hostinger
- ✅ Scripts de deploy automatizados
- ✅ Guia completo de deploy
- ✅ Configurações de produção seguras

Arquivos atualizados:
- Páginas: home, about, contact, signin
- Configurações: next.config.js, env files
- Scripts: dev-seed, sync-feeds
- Documentação: README, FEEDS
- Deploy: scripts e guias completos

--- a/env.production.example
+++ b/env.production.example
@@ -8,7 +8,7 @@ NODE_ENV=production
 DATABASE_URL="postgresql://username:password@localhost:5432/bhub_prod"
 
 # 🔴 NextAuth (CRÍTICO para segurança)
-NEXTAUTH_URL="https://seudominio.com"
+NEXTAUTH_URL="https://bhub.online"
 NEXTAUTH_SECRET="chave-super-secreta-32-caracteres-minimo-gerar-com-openssl"
 
 # 🔴 APIs Externas
@@ -53,3 +53,6 @@ DATA_RETENTION_DAYS=365
 # openssl rand -base64 32
 # ou
 # node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+
+# 🔴 Desenvolvimento (NÃO exibir credenciais em produção)
+SHOW_DEMO_CREDENTIALS=false
